[tool.poetry]
name = "bottango_playback_interface"
version = "0.4.2dev1"
description = "Bottango Playback Interface"
authors = ["Martin Rioux"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "bottango_playback_interface", from = "src"},

]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]


[tool.poetry.dependencies]
python = "^3.7.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
click = "^7.0"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.11.1"
Jinja2 = "^2.11.3"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.11.1"
isort = "^5.8.0"
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.6.0"
Pygments = "^2.8.1"

[tool.poetry.scripts]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["bottango_playback_interface"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
experimental_string_processing = true

[tool.isort]
profile = 'black'
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
